    - Revert "drm: add a locked version of drm_is_current_master"
    - certs: Add EFI_CERT_X509_GUID support for dbx entries (CVE-2020-26541)
    - certs: Move load_system_certificate_list to a common function
    - certs: Add ability to preload revocation certs
    - integrity: Load mokx variables into the blacklist keyring

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 23 Jul 2021 09:29:18 +0200

linux (5.10.46-5) bullseye-security; urgency=high

  * virtio_console: Assure used length from device is limited (CVE-2021-38160)
  * NFSv4: Initialise connection to the server in nfs4_alloc_client()
    (CVE-2021-38199)
  * tracing: Fix bug in rb_per_cpu_empty() that might cause deadloop.
    (CVE-2021-3679)
  * [poewrpc*] KVM: PPC: Book3S: Fix H_RTAS rets buffer overflow
    (CVE-2021-37576)
  * ovl: prevent private clone if bind mount is not allowed (CVE-2021-3732)
  * [x86] KVM: nSVM: avoid picking up unsupported bits from L2 in int_ctl
    (CVE-2021-3653)
  * [x86] KVM: nSVM: always intercept VMLOAD/VMSAVE when nested (CVE-2021-3656)
  * bpf: Fix integer overflow involving bucket_size (CVE-2021-38166)
  * ath: Use safer key clearing with key cache entries (CVE-2020-3702)
  * ath9k: Clear key cache explicitly on disabling hardware (CVE-2020-3702)
  * ath: Export ath_hw_keysetmac() (CVE-2020-3702)
  * ath: Modify ath_key_delete() to not need full key entry (CVE-2020-3702)
  * ath9k: Postpone key cache entry deletion for TXQ frames reference it
    (CVE-2020-3702)
  * btrfs: fix NULL pointer dereference when deleting device by invalid id
    (CVE-2021-3739)
  * net: qrtr: fix another OOB Read in qrtr_endpoint_post (CVE-2021-3743)
  * vt_kdsetmode: extend console locking (CVE-2021-3753)
  * ext4: fix race writing to an inline_data file while its xattrs are changing
    (CVE-2021-40490)
  * dccp: don't duplicate ccid when cloning dccp sock (CVE-2020-16119)
  * io_uring: ensure symmetry in handling iter types in loop_rw_iter()
    (CVE-2021-41073)