@@ -19,15 +19,16 @@ Signed-off-by: "Lee, Chun-Yi" <jlee@suse.com>
  - Adjust filename]
 [Salvatore Bonaccorso: Forward-ported to 5.10: Refresh for changes in
 38a1f03aa240 ("integrity: Move import of MokListRT certs to a separate
-routine")]
+routine"). Refresh in context for change in ebd9c2ae369a ("integrity: Load mokx
+variables into the blacklist keyring")]
 ---
  security/integrity/platform_certs/load_uefi.c | 26 +++++++++++++++-----------
  1 file changed, 15 insertions(+), 11 deletions(-)
 
 --- a/security/integrity/platform_certs/load_uefi.c
 +++ b/security/integrity/platform_certs/load_uefi.c
-@@ -175,6 +175,10 @@ static int __init load_uefi_certs(void)
- 		kfree(dbx);
+@@ -191,6 +191,10 @@ static int __init load_uefi_certs(void)
+ 		kfree(mokx);
  	}
  
 +	/* the MOK can not be trusted when secure boot is disabled */
