@@ -86,6 +86,9 @@ linux (5.10.47-1) UNRELEASED; urgency=medium
     - certs: Add ability to preload revocation certs
     - integrity: Load mokx variables into the blacklist keyring
 
+  [ Salvatore Bonaccorso ]
+  * Refresh "MODSIGN: do not load mok when secure boot disabled"
+
  -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 23 Jul 2021 09:29:18 +0200
 
 linux (5.10.46-5) bullseye-security; urgency=high
